--- a/web/app/themes/debetooging/resources/styles/common/_global.scss
+++ b/web/app/themes/debetooging/resources/styles/common/_global.scss
@@ -12,6 +12,7 @@ body {
 }
 
 h1 {
+  margin-bottom: 2.5rem;
   color: var(--wp--preset--color--blue);
   font-weight: 800;
 }
@@ -37,6 +38,14 @@ main {
   a {
     font-weight: 700;
     text-decoration: none;
+  }
+}
+
+ul,
+ol,
+p {
+  + h2 {
+    margin-top: 2rem;
   }
 }
 
