--- a/web/app/themes/debetooging/resources/styles/partials/_header.scss
+++ b/web/app/themes/debetooging/resources/styles/partials/_header.scss
@@ -1,5 +1,4 @@
 .banner {
-  position: fixed;
   z-index: 400;
   top: 0;
   right: 0;
@@ -13,16 +12,16 @@
     text-decoration: none;
   }
 
+  &__content {
+    height: 100px;
+  }
+
   .admin-bar & {
     top: 32px;
 
     @media (width <= 782px) {
       top: calc(46px);
     }
-  }
-
-  &__content {
-    height: var(--header-height);
   }
 
   .brand {
@@ -83,7 +82,6 @@
     .navigation-primary {
       position: absolute;
       z-index: 1;
-      top: var(--header-height);
       right: calc(var(--wp--custom--spacing--outer) * -1);
       left: calc(var(--wp--custom--spacing--outer) * -1);
       padding: 15px var(--wp--custom--spacing--outer) 15px var(--wp--custom--spacing--outer);
@@ -91,7 +89,7 @@
       opacity: 0;
       pointer-events: none;
       text-align: right;
-      transform: translateY(calc(calc(100% + var(--header-height)) * -1));
+      transform: translateY(-100%);
       transition: transform 0.25s ease-in-out, opacity 0.25s ease-in-out 0.15s;
 
       .alternative-header & {
